--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
         <header>
             <img src="./Media/Profile.png" alt="Isac's Profile Photo" id="profilePhoto">
             <h1 id="userName">@m.isac14</h1>
-            <p id="description">Sou programador frontend, apaixonado por games e tecnologia</p>
+            <p id="description">Sou programador frontend, apaixonado por games e tecnologia.</p>
         </header>
 
         <main>
             <ul id="list">
-                <a href="https://www.linkedin.com/in/isac-mamede/"><li>LinkedIn <img src="./Media/icons8-linkedin-50 .png" alt="LinkedIn Icon" class="listIcon"></li></a> 
+                <a href="https://github.com/Isac14"><li>GitHub <img src="./Media/github.png" alt="LinkedIn Icon" class="listIcon"></li></a> 
+                <a href="https://www.linkedin.com/in/isac-mamede/"><li>LinkedIn <img src="./Media/linkedin.png" alt="LinkedIn Icon" class="listIcon"></li></a> 
                 <a href="https://www.instagram.com/m.isac14/"><li>Instagram <img src="./Media/instagram.png" alt="Instagram Icon" class="listIcon"></li></a>
-                <a href="https://twitter.com/isac_mamede"><li>Twitter <img src="./Media/twitter.png" alt="Twitter Icon" class="listIcon"></li></a>
                 <a href="mailto:isac.mamede14@gmail.com"><li>Email <img src="./Media/email.png" alt="Email Icon" class="listIcon"></li></a>
             </ul>
         </main>
-
     </div>
 </body>
 </html>
