--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         <main>
             <ul id="list">
-                <a href="https://github.com/Isac14"><li>GitHub <img src="./Media/github.png" alt="LinkedIn Icon" class="listIcon"></li></a> 
-                <a href="https://www.linkedin.com/in/isac-mamede/"><li>LinkedIn <img src="./Media/linkedin.png" alt="LinkedIn Icon" class="listIcon"></li></a> 
-                <a href="https://www.instagram.com/m.isac14/"><li>Instagram <img src="./Media/instagram.png" alt="Instagram Icon" class="listIcon"></li></a>
-                <a href="mailto:isac.mamede14@gmail.com"><li>Email <img src="./Media/email.png" alt="Email Icon" class="listIcon"></li></a>
+                <a href="https://github.com/Isac14" target="_blank"><li>GitHub <img src="./Media/github.png" alt="LinkedIn Icon" class="listIcon"></li></a> 
+                <a href="https://www.linkedin.com/in/isac-mamede/" target="_blank"><li>LinkedIn <img src="./Media/linkedin.png" alt="LinkedIn Icon" class="listIcon"></li></a> 
+                <a href="https://www.instagram.com/m.isac14/" target="_blank"><li>Instagram <img src="./Media/instagram.png" alt="Instagram Icon" class="listIcon"></li></a>
+                <a href="mailto:isac.mamede14@gmail.com" target="_blank"><li>Email <img src="./Media/email.png" alt="Email Icon" class="listIcon"></li></a>
             </ul>
         </main>
     </div>
